# cerberus-core

./: .eslintrc.json  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: Python-sdk.yml  ci.yml  pages.yml  publish.yml  release.yml
corpus/: README.md
docs/: demo-surface-strategy.md  demo.html  egi-signed-manifests.md  getting-started.md  index.html  live-model-validation.md  showcase.html  stress-harness.md  verify-yourself.md
examples/: auto-guard.ts  basic-guard.ts  demo-capture.ts  langchain-rag-demo.ts  live-attack-demo.ts  live-validation.mjs  memory-tracking.ts  ttp-l2-demo.ts  webhook-sink.mjs
harness/: agent-multi.ts  agent.ts  analyze.ts  bench.ts  benchmark.ts  demo-servers.ts  payloads.ts  runner.ts  tools.ts  types.ts
harness/action/: runner.mjs  runner.ts  scenarios.mjs  scenarios.ts
harness/fixtures/: private-data.json
harness/providers/: anthropic.ts  google.ts  index.ts  (+3 more)
monitoring/: README.md  alertmanager.yml  alerts.yml  docker-compose.yml  otel-collector.yml  prometheus.yml
scripts/: bootstrap-corpus.mjs  render-action-harness-report.mjs  render-stress-harness-report.mjs  render-test-report.mjs  render-validation-report.mjs  validate-corpus.mjs
sdk/python/: README.md  pyproject.toml
sdk/python/cerberus_ai/: __init__.py  async_inspect.py  context_window.py  cross_agent.py  inspector.py  manifest_gate.py  models.py
sdk/python/cerberus_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/cerberus_ai/classifiers/: __init__.py  mcp_scanner.py  ml_injection.py  multimodal.py
sdk/python/cerberus_ai/detectors/: __init__.py  l1.py  l2.py  l3.py  l4_memory.py  normalizer.py  outbound_encoding.py  split_exfiltration.py  tool_chain.py
sdk/python/cerberus_ai/discover/: __init__.py  cli.py  schema.py  static.py
sdk/python/cerberus_ai/egi/: __init__.py  engine.py  signer.py
sdk/python/cerberus_ai/graph/: __init__.py  contamination.py  delegation.py  ledger.py
sdk/python/cerberus_ai/integrations/: autogen.py  crewai.py  langchain.py  langgraph.py  llamaindex.py  openai.py
sdk/python/cerberus_ai/telemetry/: __init__.py  observe.py  prometheus.py
sdk/python/cerberus_ai/validation/: __init__.py  cli.py  corpus.py  external_loaders.py  report.py  runner.py  schema.py
sdk/python/docs/validation/v1.4-baseline/: README.md  report.json  report.md
sdk/python/docs/validation/v1.4-corpora/: README.md
sdk/python/docs/validation/v1.4-corpora/bipia/: report.json  report.md
sdk/python/docs/validation/v1.4-corpora/deepset/: report.json  report.md
sdk/python/docs/validation/v1.4-corpora/gandalf/: report.json  report.md
sdk/python/tests/adversarial/: test_evasion.py  test_hardening.py
sdk/python/tests/discovery/: test_static_scan.py
sdk/python/tests/discovery/fixtures/: anthropic_raw.py  autogen_team.py  broken_syntax.py  crewai_crew.py  langchain_agent.py  langgraph_app.py  llamaindex_query.py  mcp.json  openai_raw.py
sdk/python/tests/unit/: test_context_window.py  test_egi_signer.py  test_external_loaders.py  test_ml_injection_classifier.py  test_multimodal_scanner.py  test_outbound_encoding.py  test_p0_features.py  test_p1_features.py  test_prometheus_exporter.py  test_split_exfiltration.py  test_tool_chain.py  test_validation.py
src/: index.ts  internal.ts
(+460 files in other folders)
