[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerberus-ai"
version = "1.4.0"
description = "Runtime security for AI agent execution. Detects and correlates Lethal Trifecta conditions across privileged data access, untrusted content, and outbound behavior."
readme = "README.md"
license = "MIT"
authors = [{ name = "Six Sense Enterprise Services", email = "security@sixsenseenterprise.com" }]
keywords = ["ai", "security", "runtime", "prompt-injection", "llm", "agentic", "cerberus"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "anyio>=4.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.3.0", "langchain-core>=0.3.0"]
crewai = ["crewai>=0.80.0"]
autogen = ["pyautogen>=0.4.0"]
llamaindex = ["llama-index-core>=0.12.0"]
openai = ["openai>=1.50.0"]
anthropic = ["anthropic>=0.40.0"]
google = ["google-generativeai>=0.8.0"]
prometheus = ["prometheus-client>=0.20.0"]
# v1.4 Delta #2 — ML-backed L2 classifier. Opt-in; no weights ship
# with the OSS repo, operators point the classifier at a model file
# they download separately.
ml = [
    "onnxruntime>=1.16.0",
    "tokenizers>=0.15.0",
    "numpy>=1.26.0",
]
# v1.4 Delta #3 — Multi-modal L2 scanners. Image EXIF via Pillow,
# PDF text layer via pypdf. Audio transcription is always via
# operator-supplied override — no speech-to-text model ships in the
# OSS repo.
multimodal = [
    "Pillow>=10.0.0",
    "pypdf>=4.0.0",
]
all = [
    "cerberus-ai[langchain]",
    "cerberus-ai[crewai]",
    "cerberus-ai[autogen]",
    "cerberus-ai[llamaindex]",
    "cerberus-ai[openai]",
    "cerberus-ai[anthropic]",
    "cerberus-ai[google]",
    "cerberus-ai[prometheus]",
    "cerberus-ai[ml]",
    "cerberus-ai[multimodal]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.6.0",
    "httpx[mock]>=0.27.0",
    "prometheus-client>=0.20.0",
]

[project.scripts]
cerberus = "cerberus_ai.discover.cli:main"

[project.urls]
Homepage = "https://github.com/Odingard/cerberus-core"
Repository = "https://github.com/Odingard/cerberus-core"
Documentation = "https://github.com/Odingard/cerberus-core"
"Bug Tracker" = "https://github.com/Odingard/cerberus-core/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cerberus_ai*"]

[tool.setuptools.package-data]
cerberus_ai = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=cerberus_ai --cov-report=term-missing"

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
target-version = "py310"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
